deploy user activation

--- a/src/utils/mail/templates/registration-success.ejs
+++ b/src/utils/mail/templates/registration-success.ejs
@@ -66,7 +66,7 @@
       </div>
 
       <div class="content">
-        <p>Hallo <%= username %></p>
+        <p>Hallo <%= username %>,</p>
         <p>
           Terima telah mendaftar dilayanan kami. Berikut adalah informasi dari
           akun anda:
